# calculator

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.gradle  calc.cpp  spread.sh
include/: calc.h  calculator.h  expression.h  formalexpression.h  lefthandside.h  numberexpression.h  righthandside.h
level1/: calc.cpp
level2/: Makefile  calc.cpp
level3/: calc.cpp
level4/: calc.cpp  calc.h
level5/: Makefile  calc.cpp  calc.h
src/: .ycm_extra_conf.py  Expression.cpp  Expression.h  Parser.cpp  Parser.h  calc.cpp  calculator.cpp  expression.cpp  formalexpression_parse.cpp  main.cpp  numberexpression_parse.cpp  numberexpression_process.cpp  parse.cpp  process.cpp
